# analyze_data_scripts

./: README.md  config.py  error_utils.py  logs_handler.py  main.py  pyproject.toml  requirements.txt
app/downloads/: loggers.py  schema.py  utils.py
app/playstore/: loggers.py  schema.py  utils.py
