[tool.poetry]
name = "analyze-data-scripts"
version = "0.1.0"
description = ""
authors = ["Anton Kroosh <antonkroosh@gmail.com>"]
readme = "README.md"
packages = [{include = "analyze_data_scripts"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = {extras = ["email"], version = "^2.4.2"}
pydantic-extra-types = "^2.1.0"
pycountry = "^22.3.5"
python-json-logger = "^2.0.7"
langcodes = "^3.3.0"
ruff = "^0.0.292"
jsonlines = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

